<resources>
    <string name="register">Register</string>
    <string name="app_name">TeamMate</string>
    <string name="action_sign_in_short">Create new account</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="password_match">Passwords are not matching.</string>
    <string name="auth_failed">Authentication failed, check your email and password or register</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_login">Log in with e-mail and password.</string>
    <string name="btn_sign_out">Logout</string>
    <string name="btn_sign_activity">Sign Up</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Password confirmation</string>
    <string name="username">Username</string>
    <string name="g_maps_api_key">AIzaSyA5SObTwWEGnFkubedir0EkJu40WGwDAzo</string>
    <string-array name="player_levels">
        <item>Amateur</item>
        <item>Experienced</item>
        <item>Semi-Pro</item>
        <item>Pro</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
